fix insufficient contrast ratio

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -212,7 +212,7 @@ p {
 }
 
 .easy-label {
-  background: #129141;
+  background: #0F7036;
   color: #fff;
 }
 
